# deductions-agent-cma

./: .gitignore  EVAN_TODO.md  HANDOFF.md  ITERATIONS.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  STATUS.md  WALKTHROUGH.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
.streamlit/: config.toml
agent/: agent.yaml  environment.yaml  memory_seed.json  tools_server.py
docs/: index.html  presentation.html
docs/decisions/: 0001-memory-precedent-recall.md
fixtures/: company.json  precedents.json  promotions.json  retailers.json  settlement_history.json
fixtures/contracts/: harvest-co.md  northcart.md  valumax.md
fixtures/deductions/: D-0001.json  D-0002.json  D-0003.json  D-0004.json  D-0005.json  D-0006.json  D-0007.json  D-0008.json  D-0009.json  D-0010.json  D-0011.json  D-0012.json  D-0013.json  D-0014.json  D-0015.json  D-0016.json  D-0017.json  D-0018.json
fixtures/pos/: PROMO-2026-Q1-001.csv  PROMO-2026-Q1-004.csv  PROMO-2026-Q1-005.csv  PROMO-2026-Q1-006.csv  PROMO-2026-Q1-007.csv  PROMO-2026-Q1-008.csv  PROMO-2026-Q1-010.csv  PROMO-2026-Q1-011.csv  PROMO-2026-Q1-012.csv
ground_truth/: labels.json
ground_truth/reference_solutions/: D-0001.json  D-0002.json  D-0003.json  D-0004.json  D-0005.json  D-0006.json  D-0007.json  D-0008.json  D-0009.json  D-0010.json  D-0011.json  D-0012.json  D-0013.json  D-0014.json  D-0015.json  D-0016.json  D-0017.json  D-0018.json
runs/curated/: EVAL_REPORT.md  baseline_digest.md  baseline_results.json  postfix_digest.md  postfix_results.json  regression_citation_digest.md  regression_citation_results.json  regression_memory_digest.md  regression_memory_results.json  regression_threshold_digest.md  regression_threshold_results.json
scripts/: verify_quickstart.sh
src/: calibration.py  costs.py  digest.py  eval_runner.py  fixtures_index.py  graders.py  judge.py  memory_store.py  null_agent.py  run_agent.py  sweep.py
tests/: conftest.py  test_agent_config.py  test_calibration.py  test_citation_namespace.py  test_costs.py  test_deck_figures.py  test_digest.py  test_eval_runner.py  test_fixtures_index.py  test_graders.py  test_run_agent_ids.py  test_soundness_pass2.py  test_sweep.py  test_tools_server.py  test_ui_app.py  test_ui_data.py
ui/: app.py  data.py  theme.py
(+16 files in other folders)
