[project]
name = "deductions-desk"
version = "0.1.0"
description = "Eval-driven trade-promotion deduction settlement agent on Claude Managed Agents."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.92.0",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["src", "agent"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines are handled case by case
