[project]
name = "deductions-desk"
version = "0.1.0"
description = "Eval-driven trade-promotion deduction settlement agent on Claude Managed Agents."
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.116.0",
    "PyYAML==6.0.1",
    "matplotlib==3.11.0",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "ruff==0.15.20"]

[tool.pytest.ini_options]
pythonpath = ["src", "agent"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines are handled case by case
