[project]
name = "deductions-desk"
version = "0.1.0"
description = "Eval-driven trade-promotion deduction settlement agent on Claude Managed Agents."
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.116.0",
    "PyYAML==6.0.1",
    "matplotlib==3.11.0",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "ruff==0.15.20"]
# pandas/pyarrow are transitive via streamlit but pinned explicitly: pyarrow 25.0.0
# segfaults converting a DataFrame to Arrow under streamlit's AppTest on py3.12
# (pyarrow/pandas_compat.py convert_column), which crashed CI. Both are verified
# to pass the suite; bump deliberately, not by float.
ui = ["streamlit==1.58.0", "pandas==2.3.3", "pyarrow==24.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src", "agent", "ui"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines are handled case by case
